fern/docs/pages/realtime-server-sdk/v3/guides/voice/first-steps-with-voice/index.mdx
---
title: Making and Receiving Phone Calls
slug: /guides/voice/first-steps-with-voice
x-custom:
  author: danieleds
description: Learn how to get started with voice with the SignalWire Realtime SDK.
sidebar_custom_props:
  platform: javascript 
---

[buy-a-new-phone-number]: /platform/phone-numbers/getting-started/buying-a-phone-number
[log-in]: https://signalwire.com/signin
[realtime-sdk]: https://www.npmjs.com/package/@signalwire/realtime-api

# Making and Receiving Phone Calls

This introductory guide will show you how to make and receive calls from your own Node.js application.

## Obtaining and configuring a number

[Log in][log-in] to your SignalWire Space. From the Phone Numbers section, you can [buy a new phone number][buy-a-new-phone-number]. You will need at least one number to make and receive calls. After you have acquired a number, open its settings by clicking on "Edit Settings". Scroll down until you reach "Voice and Fax Settings", as shown in the next figure, and configure it to:

- handle incoming calls using a Relay application,
- forward the call to the "office" Relay context

<Frame caption="Voice configuration setting for handling incoming calls.">

![The Voice and Fax Settings pane.](../../../../../../assets/images/dashboard/relay/app-voice-handler.webP)

</Frame>

:::info Context
In Relay V3, a context is a named scope that allows you to group resources together. 
When you configure a phone number to handle calls with a Relay application 
and specify a context, all calls to that number will be delivered to Relay 
clients listening on that context.
:::

## Installation of the SDK

First, you need to obtain the [Realtime SDK][realtime-sdk] from npm. From your terminal you can run the following command to install it:

```shell npm2yarn
npm install --save @signalwire/realtime-api@~3
```

Then, include the package in JavaScript as follows:

```js
import { Voice } from "@signalwire/realtime-api";
```

### Making your first call

To make a call from Node.js you need to instantiate a Voice client, and then call one of its dialing methods.

```js
import { Voice } from "@signalwire/realtime-api";

const client = new Voice.Client({
  project: "your-project-id",
  token: "your-api-token",
  contexts: ["office"],
});

try {
  const call = await client.dialPhone({
    from: "+1xxx", // Must be a number in your SignalWire Space
    to: "+1yyy",
    timeout: 30,
  });

  console.log("The call has been answered!", call.id);
} catch (e) {
  console.error(e);
}
```

We used the "office" context when initializing the Voice client. You use the `contexts` array in the Client constructor to indicate which group of calls you want to receive. For the moment we are not listening for incoming calls, to the context doesn't have any effect. Still, it will be useful for later, when we are going to listen for incoming calls.

You also need to specify a Project ID and API token: find these in the API section of your space, as shown in the following figure. Make sure that your token has the "Voice" scope enabled.

<Frame caption="You can find your Project ID and Token from the API tab in your SignalWire Space. Make sure your token has the 'Voice' scope enabled.">
![the API tab, showing the Project ID, Space URL, and API Token.](../../../../../../assets/images/dashboard/credentials/api-credentials.webp)
</Frame>

## Receiving incoming calls

Once a Client is initialized, you can listen for incoming calls on the selected contexts (in our example, just "office"). For example:

```js
client.on("call.received", async (call) => {
  console.log("Call received:", call.id, call.from, call.to);

  try {
    await call.answer();
    console.log("Inbound call answered");
  } catch (error) {
    console.error("Error answering inbound call", error);
  }
});
```

Your event handler receives a call object, which you can use to answer the call, to access fields such as `call.from` and `call.to`, or to call additional methods (playing audio, prompting for input, transferring the call, etc.)

## Next steps

Congratulations! You can now make and receive calls with your Node.js application. You are now ready to explore the advanced guides in the Voice section from the left menu.